--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 
     <!-- fonts -->
     <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
+
+    <!-- CSS -->
+
+    <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body>
     <h1>
