tái sử dụng header và footer

--- a/sign-in.html
+++ b/sign-in.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>sign-in</title>
     <!-- favicon -->
     <link
       rel="icon"
@@ -35,7 +35,7 @@
     <script>
       load("#header", "./templates/header.html");
     </script>
-    <h1>home page</h1>
+    <h1>sign-in page</h1>
     <footer id="footer"></footer>
     <script>
       load("#footer", "./templates/footer.html");
