--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
     <script src="assets/js/script.js"></script>
   </head>
   <body>
-    <header id="header"></header>
-    <script>
-      load("#header", "./templates/header.html");
-    </script>
-    <h1>home page</h1>
-    <footer id="footer"></footer>
-    <script>
-      load("#footer", "./templates/footer.html");
-    </script>
+    <div class="container">
+      <header id="header"></header>
+      <script>
+        load("#header", "./templates/header.html");
+      </script>
+      <h1>home page</h1>
+      <footer id="footer"></footer>
+      <script>
+        load("#footer", "./templates/footer.html");
+      </script>
+    </div>
   </body>
 </html>
