--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <script src="assets/js/script.js"></script>
   </head>
   <body>
+    <header id="header" class="header"></header>
+    <script>
+      load("#header", "./templates/header.html");
+    </script>
     <div class="container">
-      <header id="header"></header>
-      <script>
-        load("#header", "./templates/header.html");
-      </script>
       <h1>home page</h1>
       <footer id="footer"></footer>
       <script>
